test/fail/enums_and_variants/code_inside_enum_class_body.lly
#[
SyntaxError: Expected '}' or 'define', not 'a label'.
    from code_inside_enum_class_body.lly:13:
]#

enum Test {
    One
    Two

    define f {
    }

    var @v = 10
}
